# test-github-actions

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: .main.yaml.swp  desktop.yaml  main.yaml  windows.yaml
src/: main.cpp
